Attempting to fix navbar on small devices

--- a/Pages/css/navbar.css
+++ b/Pages/css/navbar.css
@@ -43,3 +43,8 @@ li a:active {
 body {
     margin: 0;
 }
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {
+    .nav p  {padding: 20px;}
+
+ }
